--- a/SkinHolder_v2SourceCode/src/Application/MainWindow.xaml
+++ b/SkinHolder_v2SourceCode/src/Application/MainWindow.xaml
@@ -3,11 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SkinHolder_v2SourceCode"
         mc:Ignorable="d"
-        Title="MainWindow" Height="500" Width="500"
-        ResizeMode="NoResize, CanMinimize">
+        Title="MainWindow" Width="1000" Height="700"
+        ResizeMode="NoResize, CanMinimize"
+        ShowInTaskbar="False">
     <Grid>
-
+        <Frame x:Name="MainContent" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
