--- a/SkinHolder_v2SourceCode/src/Views/PantallaInicio.xaml
+++ b/SkinHolder_v2SourceCode/src/Views/PantallaInicio.xaml
@@ -4,8 +4,37 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             Height="700" Width="1000" Background="Black">
+             Background="#222222">
+    <UserControl.Width>
+        <Binding Path="ActualWidth" RelativeSource="{RelativeSource FindAncestor, AncestorType={x:Type Window}}" />
+    </UserControl.Width>
+    <UserControl.Height>
+        <Binding Path="ActualHeight" RelativeSource="{RelativeSource FindAncestor, AncestorType={x:Type Window}}" />
+    </UserControl.Height>
+    
     <Grid>
-        <TextBlock Text="SK:HD" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#B8D600" FontSize="100" FontWeight="Bold"/>
+        <TextBlock HorizontalAlignment="Center" 
+                   VerticalAlignment="Center" 
+                   FontSize="200" 
+                   FontWeight="Bold"
+                   FontFamily="Counter-Strike">
+            <Run Text="SK" Foreground="#fbac18" />
+            <Run Text=":" Foreground="White" />
+            <Run Text="DH" Foreground="#28397f" />
+        </TextBlock>
+        <TextBlock Text="SkinHolder v2.0.0"
+                   HorizontalAlignment="Left"
+                   VerticalAlignment="Top"
+                   Padding="10"
+                   Foreground="#B8D600"
+                   FontFamily="Counter-Strike"
+                   FontSize="20"/>
+        <TextBlock Text="by Jagoba Inda"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Bottom"
+                   Padding="10"
+                   Foreground="#B8D600"
+                   FontFamily="Counter-Strike"
+                   FontSize="20"/>
     </Grid>
 </UserControl>
