--- a/SkinHolder_v2SourceCode/src/Application/MainWindow.xaml
+++ b/SkinHolder_v2SourceCode/src/Application/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="MainWindow" Width="1000" Height="700"
+        Title="SkinHolder v2.0.0" Width="1000" Height="700"
         ResizeMode="NoResize, CanMinimize"
         ShowInTaskbar="False">
     <Grid>
