--- a/SkinHolder_v2SourceCode/src/Views/MenuPrincipal.xaml
+++ b/SkinHolder_v2SourceCode/src/Views/MenuPrincipal.xaml
@@ -1,8 +1,18 @@
 ﻿<UserControl x:Class="SkinHolder_v2SourceCode.Views.MenuPrincipal"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Height="700" Width="1000" Background="#222222">
+             Background="#333333">
+    <UserControl.Width>
+        <Binding Path="ActualWidth" RelativeSource="{RelativeSource FindAncestor, AncestorType={x:Type Window}}" />
+    </UserControl.Width>
+    <UserControl.Height>
+        <Binding Path="ActualHeight" RelativeSource="{RelativeSource FindAncestor, AncestorType={x:Type Window}}" />
+    </UserControl.Height>
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="100"/>
+            <ColumnDefinition Width="300"/>
+            <ColumnDefinition Width="100"/>
+        </Grid.ColumnDefinitions>
     </Grid>
 </UserControl>
